--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".fragment6"></activity>
-        <activity android:name=".hometab"/>
+        <activity android:name=".gradle6"></activity>
+        <activity android:name=".gradle5" />
+        <activity android:name=".gradle4" />
+        <activity android:name=".gradle3" />
+        <activity android:name=".gradle2" />
+        <activity android:name=".gradle1" />
+        <activity android:name=".fragment6" />
+        <activity android:name=".hometab" />
         <activity android:name=".fragment5" />
         <activity android:name=".fragment4" />
         <activity android:name=".fragment3" />
         <activity android:name=".fragment2" />
         <activity android:name=".fragment1" />
         <activity android:name=".Home" />
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
