--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".fragment_searchpopup2"></activity>
+        <activity android:name=".fragment2_searchpopup" >
+
+        </activity>
         <activity android:name=".hometab">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,9 +33,7 @@
         <activity android:name=".fragment2" />
         <activity android:name=".fragment1" />
         <activity android:name=".Home" />
-        <activity android:name=".MainActivity" >
-
-        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
