Grid2 UI 작성 및 데이터 연동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,9 @@
         <activity android:name=".fragment.fragment3" />
         <activity android:name=".fragment.fragment2" />
         <activity android:name=".fragment.fragment1" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity" >
+
+        </activity>
     </application>
 
 </manifest>
