--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".SignUp"></activity>
+        <activity android:name=".menu.newList"></activity>
+        <activity android:name=".menu.emargyTop" />
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".SignUp" />
         <activity android:name=".Login" />
         <activity android:name=".Home_ShowDetail" />
         <activity android:name=".hometab">
@@ -38,9 +41,7 @@
         <activity android:name=".fragment.fragment3" />
         <activity android:name=".fragment.fragment2" />
         <activity android:name=".fragment.fragment1" />
-        <activity android:name=".MainActivity" >
-
-        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
