--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,8 @@ dependencies {
     implementation "androidx.room:room-ktx:2.2.5"
     implementation("androidx.room:room-runtime:2.2.0-rc01")
     kapt("androidx.room:room-compiler:2.2.0-rc01")
-    //progressbar
-    implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
+    //quickaction
+    implementation 'com.github.piruin:quickaction:2.4.3'
 
 
 
