--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -13,6 +14,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
@@ -55,16 +57,14 @@ dependencies {
 
     }
     implementation "androidx.fragment:fragment-ktx:1.2.4"
-    //Room
-    implementation "androidx.room:room-runtime:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5" // For Kotlin use kapt instead of annotationProcessor
 
-    // optional - Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:2.2.5"
-    implementation("androidx.room:room-runtime:2.2.0-rc01")
-    kapt("androidx.room:room-compiler:2.2.0-rc01")
     //quickaction
     implementation 'com.github.piruin:quickaction:2.4.3'
+    //firebase
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation'com.google.firebase:firebase-auth:19.3.1'
+    implementation'com.google.firebase:firebase-firestore-ktx:21.4.3'
+    implementation 'com.android.support:multidex:1.0.3'
 
 
 
