공고목록 1차 완성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,13 +25,7 @@
         <activity android:name=".SignUp" />
         <activity android:name=".Login" />
         <activity android:name=".Home_ShowDetail" />
-        <activity android:name=".hometab">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".hometab"/>
         <activity android:name=".fragment.fragment2_searchpopup" />
         <activity android:name=".fragment.fragment5" />
         <activity android:name=".gradle.gradle1" />
@@ -44,7 +38,13 @@
         <activity android:name=".fragment.fragment1" />
         <activity android:name=".fragment.fragment2" />
         <activity android:name=".fragment.fragment3" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
