--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_onbidemade"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network"
         android:roundIcon="@mipmap/ic_launcher_round"
